2008-02-14  Sam Steingold  <sds@gnu.org>

	* record.d (make_code_vector): converted from MAKE-CODE-VECTOR
	(make_closure): accept 7 keywords instead of 6 positional arguments;
	call make_code_vector on :CODE
	(make_constant_initfunction): update
	* subr.d, constsym.d (make_code_vector): remove
	* constsym.d (make_closure): rename from %MAKE-CLOSURE to MAKE-CLOSURE
	(Kcode, Kconstants, Kseclass, Klambda_list, Kdocumentation, Kjitc_p):
	add
	* subrkw.d (make_closure): add
	* eval.d (FUNTAB): remove make_code_vector
	* io.d (CLOSURE-READER): update the C_make_closure() call
	* compiler.lisp (make-closure): remove defun
	(create-fun-obj): update make-closure call

2008-02-14  Sam Steingold  <sds@gnu.org>

	* constobj.d (version): bump
	* constsym.d, subr.d, foreign.d (lookup_foreign_variable)
	(lookup_foreign_function, foreign_library_variable): remove legacy ABI
	* constsym.d, subr.d, foreign.d (open_foreign_library): renamed
	from foreign_library
	* foreign.d (open_library, update_library, check_library):
	remove legacy version argument
	* eval.d (FUNTAB): add cs_string_eq, cs_string_noteq, cs_string_less,
	cs_string_greater, cs_string_ltequal, cs_string_gtequal, cs_string,
	fdefinition, whitespacep, elastic_newline, cs_intern, cs_find_symbol,
	cs_shadow, cs_make_package, cs_find_all_symbols, cs_symbol_name,
	map_into, xgcd
	* foreign1.lisp (open-foreign-library): export
	* macros2.lisp (check-not-special-variable-p): remove legacy ABI
	* record.d, subr.d (MAKE-MACRO): both arguments are required

2008-02-13  Sam Steingold  <sds@gnu.org>

	first stab at keeping JITC code in the closure
	* compiler.lisp (make-closure): accept :jitc-p and pass it on to
	%make-closure in a cons cell together with seclass
	* eval.d (interpret_bytecode) [USE_JITC]: check cclosure_jitc_p
	and use jit_run instead of jit_compile_
	* io.d (CLOSURE-READER): pass jitc_p to make_closure
	(pr_cclosure_lang): write jitc_p
	* lightning.c (jitc_object): new struct
	(all_jitc_objects): new static